crates/atlas-runtime/tests/snapshots/frontend_syntax__precedence_unary_not_before_and.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: And
        left:
          Unary:
            op: Not
            expr:
              Literal:
                - Bool: false
                - start: 1
                  end: 6
            span:
              start: 0
              end: 6
        right:
          Literal:
            - Bool: true
            - start: 10
              end: 14
        span:
          start: 0
          end: 14
    span:
      start: 0
      end: 15
