crates/atlas-runtime/tests/snapshots/frontend_syntax__return_no_value.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Return:
        value: ~
        span:
          start: 0
          end: 7
